2011-11-18  Mark Hahnenberg  <mhahnenberg@apple.com>

        De-virtualize ExecutableBase::intrinsic
        https://bugs.webkit.org/show_bug.cgi?id=72548

        Reviewed by Oliver Hunt.

        * runtime/Executable.cpp:
        (JSC::ExecutableBase::intrinsic): Dynamic cast to NativeExecutable. If successful, call intrinsic, otherwise return default value. 
        * runtime/Executable.h:
        * runtime/JSCell.h:
        (JSC::jsDynamicCast): Add jsDynamicCast that duplicates the functionality of dynamic_cast in C++ but uses ClassInfo
        rather than requiring C++ RTTI.

2011-11-18  Patrick Gansterer  <paroga@webkit.org>

        [CMake] Remove duplicate dtoa files from CMakeLists.txt
        https://bugs.webkit.org/show_bug.cgi?id=72711

        Reviewed by Brent Fulgham.

        * wtf/CMakeLists.txt:

2011-11-17  Michael Saboff  <msaboff@apple.com>

        [Qt] REGRESSION(r100510): Enable 8 Bit Strings in JavaScriptCore
        https://bugs.webkit.org/show_bug.cgi?id=72602

        Fixed StringImpl::foldCase by adding return in the case we need to handle
        folding of 8 bit strings with Latin-1 characters.

        Fixed case where StringImpl::replace was using a char temp instead of an
        LChar temp.

        Because of the second change, I changed other uses of char or
        unsigned char to LChar.

        Reviewed by Zoltan Herczeg.

        * wtf/text/StringImpl.cpp:
        (WTF::StringImpl::upper):
        (WTF::StringImpl::foldCase):
        (WTF::equal):
        (WTF::equalIgnoringCase):
        (WTF::StringImpl::replace):

2011-11-17  Patrick Gansterer  <paroga@webkit.org>

        [CMake] Move FAST_MALLOC specific lines from Platform*.cmake to CMakeLists.txt
        https://bugs.webkit.org/show_bug.cgi?id=72644

        Reviewed by Brent Fulgham.

        All ports need to do the same determination about fast malloc. Move the CMake code from